--- a/templates/settings.html
+++ b/templates/settings.html
@@ -34,17 +34,17 @@
         <div class="row">
             <div class="col">
                 {% for row in settings %}
-                <form action="/settings/settings-update" method="post">
+                <form action="/settings/update" method="post">
                     <div class="form-row">
                         <div class="col-auto"><input class="form-control" type="text" name="id" value="{{ row['id'] }}" placeholder="ID" readonly=""></div>
                         <div class="col-auto"><input class="form-control" type="text" name="name" value="{{ row['name'] }}" placeholder="name"></div>
                         <div class="col-auto"><input class="form-control" type="text" name="value" value="{{ row['value'] }}" placeholder="value"></div>
                         <div class="col-auto"><button class="btn btn-success" type="submit">Update</button></div>
-                        <div class="col-auto"><button class="btn btn-danger" type="submit" formaction="/settings/settings-delete">Delete</button></div>
+                        <div class="col-auto"><button class="btn btn-danger" type="submit" formaction="/settings/delete">Delete</button></div>
                     </div>
                 </form>
                 {% endfor %}
-                <form action="/settings/settings-new" method="post">
+                <form action="/settings/new" method="post">
                     <div class="form-row">
                         <div class="col-auto"><input class="form-control" type="text" name="name" placeholder="name"></div>
                         <div class="col-auto"><input class="form-control" type="text" name="value" placeholder="value"></div>
