--- a/templates/log.html
+++ b/templates/log.html
@@ -11,15 +11,15 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
-        <div class="container-fluid"><a class="navbar-brand" href="#">DoorBell</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="/">DoorBell</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/">Live</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="people">People</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="people">Unknown</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="settings">Advanced</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="log">Log</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/">Live</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/people">People</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/people/search/unknown">Unknown</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/settings">Advanced</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/log">Log</a></li>
                     <li class="nav-item" role="presentation"></li>
                 </ul>
             </div>
@@ -57,9 +57,9 @@
                         <tbody>
                             {% for row in log %}
                             <tr><a href="person">
-                                <td>{{ row['datetime'] }}</td>
-                                <td>{{ row['person_id'] }}</td>
-                                <td>{{ row['name'] }}</td>
+                                <td onclick="window.location='/log/search/{{ row['datetime'] }}/'">{{ row['datetime'] }}</td>
+                                <td onclick="window.location='/person/{{ row['person_id'] }}'">{{ row['person_id'] }}</td>
+                                <td onclick="window.location='/log/search/{{ row['name'] }}/'">{{ row['name'] }}</td>
                                 <td>{{ row['distance'] }}</td>
                             </a></tr>
                             {% endfor %}
