--- a/templates/settings.html
+++ b/templates/settings.html
@@ -11,15 +11,15 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
-        <div class="container-fluid"><a class="navbar-brand" href="#">DoorBell</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="/">DoorBell</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/">Live</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="people">People</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="people">Unknown</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="settings">Advanced</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="log">Log</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/">Live</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/people">People</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/people/search/unknown">Unknown</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/settings">Advanced</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/log">Log</a></li>
                     <li class="nav-item" role="presentation"></li>
                 </ul>
             </div>
