only logs same person every 10 seconds

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <div class="container text-center"><img src="{{ url_for('static', filename='assets/img/Donald%20Trump-930ca84e-c6ac-11ea-80a4-3085a9a7fdd0.JPG') }}"></div>
+    <div class="container text-center"><img src="/stream.mjpg"></div>
     <script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
 </body>
