--- a/templates/settings.html
+++ b/templates/settings.html
@@ -33,24 +33,54 @@
         </div>
         <div class="row">
             <div class="col">
+                <div class="form-row">
+                    <div class="col-auto">
+                        <form action="/settings/restart_camera" method="post"><button class="btn btn-danger" type="submit">Restart Camera Service</button>
+                        </form>
+                    </div>
+                    <div class="col-auto">
+                        <form action="/settings/restart_gunicorn" method="post"><button class="btn btn-danger" type="submit">Restart Gunicorn Service</button>
+                        </form>
+                    </div>
+                    <div class="col-auto">
+                        <form action="/settings/restart_pi" method="post"><button class="btn btn-danger" type="submit">Restart Pi</button>
+                        </form>
+                    </div>
+                    <div class="col-auto">
+                        <form action="/settings/halt_pi" method="post"><button class="btn btn-danger" type="submit">Shutdown Pi</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-auto">
+                        <form action="/person/fix" method="post">
+                            <div class="form-row">
+                                <div class="col-auto"><input class="form-control" type="text" name="id" placeholder="ID"></div>
+                                <div class="col-auto"><button class="btn btn-primary" type="submit">Fix person loading issue</button></div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <form action="/settings/new" method="post">
+                    <div class="form-row">
+                        <div class="col-auto"><input class="form-control" type="text" name="name" placeholder="name"></div>
+                        <div class="col-auto"><input class="form-control" type="text" name="value" placeholder="value"></div>
+                        <div class="col-auto"><input class="form-control" type="text" name="notes" placeholder="value"></div>
+                        <div class="col-auto"><button class="btn btn-primary" type="submit">Add</button></div>
+                    </div>
+                </form>
                 {% for row in settings %}
                 <form action="/settings/update" method="post">
                     <div class="form-row">
                         <div><input class="form-control" type="text" name="id" value="{{ row['id'] }}" placeholder="ID" readonly="" hidden></div>
                         <div class="col-auto"><input class="form-control" type="text" name="name" value="{{ row['name'] }}" placeholder="name"></div>
                         <div class="col-auto"><input class="form-control" type="text" name="value" value="{{ row['value'] }}" placeholder="value"></div>
+                        <div class="col-auto"><input class="form-control" type="text" name="notes" value="{{ row['notes'] }}" placeholder="value"></div>
                         <div class="col-auto"><button class="btn btn-success" type="submit">Update</button></div>
                         <div class="col-auto"><button class="btn btn-danger" type="submit" formaction="/settings/delete">Delete</button></div>
                     </div>
                 </form>
                 {% endfor %}
-                <form action="/settings/new" method="post">
-                    <div class="form-row">
-                        <div class="col-auto"><input class="form-control" type="text" name="name" placeholder="name"></div>
-                        <div class="col-auto"><input class="form-control" type="text" name="value" placeholder="value"></div>
-                        <div class="col-auto"><button class="btn btn-primary" type="submit">Add</button></div>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
