--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </nav>
-    <div class="container text-center"><img src="/stream.mjpg"></div>
+    <div class="container text-center"><img src="static/temp.JPG"></div>
     <script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
 </body>
