--- a/templates/person.html
+++ b/templates/person.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="form-row">
                         <div class="col"><label class="col-form-label" for="pin">PIN</label></div>
-                        <div class="col"><input class="form-control" type="number" id="pin" name="pin" placeholder="PIN" value="{{ person[0]['pin'] }}"></div>
+                        <div class="col"><input class="form-control" type="password" id="pin" name="pin" placeholder="PIN" value="{{ person[0]['pin'] }}"></div>
                     </div>
                     <div class="form-row">
                         <div class="col"><label class="col-form-label" for="announce">Announce</label></div>
