--- a/templates/settings.html
+++ b/templates/settings.html
@@ -118,7 +118,7 @@
                         <div><input class="form-control" type="text" name="id" value="{{ row['id'] }}" placeholder="ID" readonly="" hidden></div>
                         <div class="col-auto"><input class="form-control" type="text" name="name" value="{{ row['name'] }}" placeholder="name"></div>
                         <div class="col-auto"><input class="form-control" type="text" name="value" value="{{ row['value'] }}" placeholder="value"></div>
-                        <div class="col-auto"><input class="form-control" type="text" name="notes" value="{{ row['notes'] }}" placeholder="value"></div>
+                        <div class="col-auto"><input class="form-control" type="text" name="notes" value="{{ row['notes'] }}" placeholder="Description"></div>
                         <div class="col-auto"><button class="btn btn-success" type="submit">Update</button></div>
                         <div class="col-auto"><button class="btn btn-danger" type="submit" formaction="/settings/delete">Delete</button></div>
                     </div>
